# heuristic-search

./: LICENSE
CBS/: CBS_data_analysis.ipynb
CBS/source/: CBS  CMakeLists.txt  Makefile  astar.cpp  astar.h  cmake_install.cmake  config.cpp  config.h  conflict_avoidance_table.cpp  conflict_avoidance_table.h  conflict_based_search.cpp  conflict_based_search.h  conflict_set.cpp  conflict_set.h  constraints_set.cpp  constraints_set.h  dijkstra.h  focalsearch.cpp  focalsearch.h  gl_const.h  ilogger.h  isearch.cpp  isearch.h  map.cpp  map.h  mdd.h  mission.cpp  mission.h  multiagent_search_interface.h  multiagent_search_result.h  node.h  search_queue.cpp  search_queue.h  testing_results.h  xmllogger.cpp  xmllogger.h
CBS/source/Examples/: empty.xml  empty_batch_aggregated_log.xml  empty_log.xml  empty_single.xml
lab01-tree-search-lexxluthor/: README.md  lab01_tree_search.ipynb
lab02-dijkstra-lexxluthor/: README.md  lab02_dijkstra.ipynb
lab03-astar-lexxluthor/: README.md  lab03_astar.ipynb
lab04-benchmarkingastar-lexxluthor/: lab04_benchmarking_astar.ipynb
lab05-idastar-lexxluthor/: README.md  lab05_idastar.ipynb
lab06-lazy-astar-lexxluthor/: README.md  lab06_lazy_astar.ipynb
lab07-benchmarking-bounded-sub-optimal-astar-lexxluthor/: README.md  lab07_benchmarking_bounded_sub_optimal_astar.ipynb
lab08-arastar-lexxluthor/: README.md  lab08_arastar.ipynb
lab09-rrt-lexxluthor/: README.md  lab09_rrt.ipynb
lab10-prioritized-planning-part1-lexxluthor/: README.md
lab11-prioritized-planning-part2-lexxluthor/: README.md  lab11_prioritized_planning_part2.ipynb
(+17 files in other folders)
